--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "github-stars-organize",
   "version": "1.0.0",
   "description": "Automatic organization of GitHub starred repositories",
-  "main": "update-stars.js",
+  "main": "dist/update-stars.js",
   "scripts": {
     "build": "tsc",
-    "start": "node update-stars.js",
-    "update": "npm run build && npm start"
+    "watch": "tsc -w",
+    "start": "node dist/update-stars.js",
+    "dev": "ts-node update-stars.ts",
+    "update": "npm run build && npm start",
+    "clean": "rimraf dist",
+    "prepare": "npm run build",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "@octokit/rest": "^19.0.7",
@@ -14,6 +19,25 @@
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  }
+  },
+  "keywords": [
+    "github",
+    "stars",
+    "organize",
+    "automation",
+    "typescript"
+  ],
+  "author": "",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DSamuelHodge/github-stars-organize.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DSamuelHodge/github-stars-organize/issues"
+  },
+  "homepage": "https://github.com/DSamuelHodge/github-stars-organize#readme"
 }
