Update package.json with dotenv dependency

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@octokit/rest": "^19.0.7",
+    "dotenv": "^16.3.1",
     "marked": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
+    "@types/dotenv": "^8.2.0",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
